update employee-add-edit component and we're done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div class="container">
-
-  <a [routerLink]="['/']" class="btn btn-info">Start</a>
+  <!-- <a [routerLink]="['/']" class="btn btn-info">Start</a> -->
   <router-outlet></router-outlet>
-
 </div>
