--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -10,8 +10,15 @@
     <li>{{ employee.street }}</li>
     <li>{{ employee.zipCode }}</li>
     <li>{{ employee.userName }}</li>
-    <li>{{ employee.ipAddress }}</li>
+    <!-- <li>{{ employee.ipAddress }}</li> -->
   </ul>
-
 </ng-container>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="col-sm-6">
+      <a [routerLink]="['/']" class="btn btn-dark">Go Back</a>
+    </div>
+    <div class="col-sm-6"></div>
+  </div>
+</div>
 <ng-template #loading>Loading…</ng-template>
